--- a/SimpleMooc.Api/SimpleMooc.Api.csproj
+++ b/SimpleMooc.Api/SimpleMooc.Api.csproj
@@ -2,21 +2,23 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-      <UserSecretsId>7192a7e5-2440-4668-b737-2ab89dd97bc1</UserSecretsId>
-  </PropertyGroup>
+        <UserSecretsId>7192a7e5-2440-4668-b737-2ab89dd97bc1</UserSecretsId>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
+    </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
-        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.1.0" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.1.0"/>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SimpleMooc.Domain\SimpleMooc.Domain.csproj" />
-      <ProjectReference Include="..\SimpleMooc.Infra\SimpleMooc.Infra.csproj" />
-      <ProjectReference Include="..\SimpleMooc.Shared\SimpleMooc.Shared.csproj" />
+        <ProjectReference Include="..\SimpleMooc.Domain\SimpleMooc.Domain.csproj"/>
+        <ProjectReference Include="..\SimpleMooc.Infra\SimpleMooc.Infra.csproj"/>
+        <ProjectReference Include="..\SimpleMooc.Shared\SimpleMooc.Shared.csproj"/>
     </ItemGroup>
 
 </Project>
